--- a/index.achievements.QB.html
+++ b/index.achievements.QB.html
@@ -30,7 +30,7 @@
 <div class="timeline-item" id="year2023">
 <div class="timeline-year">2023</div>
 <div class="timeline-content">
-🪐 I won 3rd place at the Junior Academy of Sciences of Ukraine (МАН). This is the largest and most prestigious competition in Ukraine. It covers many sciences and brings together the best students from across the country. In 2023, I participated in the Astronomy section.
+🪐 I won 3rd place at the Junior Academy of Sciences of Ukraine (МАН). This is the largest and most prestigious competition in Ukraine. It covers many sciences and brings together the best students from across the country. In 2023, I participated in the Astronomy section. In the photos, you can see me presenting my project and me at the award ceremony.
 
 <div>
 <img src="показ.jpg" alt="Astronomy competition photo 1" class="photo-2023-1">
@@ -146,7 +146,7 @@ My other activities in 2024:
 <div class="timeline-item" id="year2025">
 <div class="timeline-year">2025</div>
 <div class="timeline-content">
-🌍 In 2025, I continued my work, wrote another paper, and built a demonstration model of the device I had described in my research. That year was marked by major changes in my life. A war began in my country, and because of this, I was forced to leave my home and move to the United States, where I am still trying to continue developing my projects.
+🌍 In 2025, I continued my work, wrote another scientific paper, and built a demonstration model of the device I had described in my research. That year was marked by major changes in my life. A war began in my country, and because of this, I was forced to leave my home and move to the United States, where I am still trying to continue developing my projects. In the photos, you can see me presenting my reaserch to the judges and the demonstration model of the device.
 <div>
 <img src="me.jpg" class="photo-2025-1" alt="Presentation photo">
 <img src="лок.jpg" class="photo-2025-2" alt="Prototype photo">
@@ -204,4 +204,5 @@ My other activities in 2025:
 </footer>
 
 </body>
+
 </html>
