--- a/index.achievements.QB.html
+++ b/index.achievements.QB.html
@@ -197,7 +197,7 @@ My other activities in 2025:
 <p>I believe that my journey is only beginning. I am eager to join communities that value creativity and collaboration.</p>
 </div>
 <div class="video-container1">
-<p><a href="index.QB.html" class="button">⬅️ Back to first site</a></p>
+<p><a href="index.html" class="button">⬅️ Back to first site</a></p>
 </div>
 <footer>
 &copy; 2025 Oleksandr Palatash
@@ -206,4 +206,5 @@ My other activities in 2025:
 </body>
 
 </html>
+
 
